@@ -46,7 +46,7 @@ struct Break_req;
 struct Cadenza_req;
 struct Change_iterator;
 struct Change_translator;
-struct Simultaneous_music;
+struct Chord_name_engraver;
 struct Clef_change_req;
 struct Clef_item;
 struct Clef_engraver;
@@ -186,7 +186,6 @@ struct Rhythmic_grouping;
 struct Rhythmic_head;
 struct Rhythmic_grouping_req;
 struct Rhythmic_req;
-struct Single_malt_grouping_item;
 struct Scope;
 struct Separating_group_spanner;
 struct Score;
@@ -200,6 +199,8 @@ struct Script_def;
 struct Script_engraver;
 struct Script_req;
 struct Simple_music;
+struct Simultaneous_music;
+struct Single_malt_grouping_item;
 struct Skip_req;
 struct Slur;
 struct Slur_engraver;
