@@ -1,3 +1,8 @@
+pl 10.jcn1
+	- input/test/chords.ly
+	- \type ChordNames and chord-name-engraver.*
+	- chords mode: \chords { <c e g> @c; @d7; }
+
 pl 10
 
 pl 9.jcn3
